--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.0",
     "axios": "^0.24.0",
+    "firebase": "^9.6.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.1.1",
+    "react-scripts": "5.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
