--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=http://localhost:3000/register/complete
+REACT_APP_LOGIN=http://localhost:3000/api/v1/users/login
+REACT_APP_PRODUCTS='http://localhost:3000/api/v1/products'
