--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.18.9",
     "axios": "^0.24.0",
     "firebase": "^9.6.9",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
